12/25/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (gdb_input): TGDB changed tgdb_recv_debugger_console_data 
	to gdb_process.

12/22/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (last_relative_file): Removed global.
	(process_commands): Add TGDB_FILENAME_PAIR case.
	Remove TGDB_ABSOLUTE_SOURCE_ACCEPTED case.
	(does_request_require_console_update): Modify cases.
	* src/interfac.c (internal_if_input): Removed last_relative_file
	extern. Update to TGDB's new interface.

12/20/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (start_gdb): Query TGDB for the initial source location.
	(does_request_require_console_update): Add case.

11/26/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (process_commands): Process new TGDB command.
	(main): Remove call to old TGDB interface function.

11/23/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (rlctx_send_user_command, tab_completion): Update to
	TGDB's new interface.
	* src/cgdbrc.c (command_do_continue, command_do_finish,
	command_do_next, command_do_run, command_do_step): Ditto.
	* src/interface.c (toggle_breakpoint, source_input,
	internal_if_input): Ditto.

11/20/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.h (handle_request): Added temporary prototype.
	* src/cgdb.c (last_request): Added global.
	(handle_request, does_request_require_console_update): Added new function.
	(update_prompt): Removed function.
	Add handle_request calls.
	* src/cgdbrc.c: Add handle_request calls.
	* src/interface.c: Ditto.

10/12/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (process_commands): Update for TGDB interface change.

10/06/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (gdb_input): TGDB interface changed. Update CGDB.

10/06/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (rlctx_send_user_command): TGDB interface changed. 
	Update CGDB.

10/06/2005 Bob Rossi <bob@brasko.net>

	* include/helptext.h: Autogenerated.
	* src/cgdb.c (term_attributes): Added global.
	(cleanup): Changed call from tty_reset to tty_set_attributes.